Add recommendations endpoint
